--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.468.0",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "pg": "^8.18.0",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.19.30",
